[package]
name = "sybil"
version = "2.0.0"
authors = ["Jonathan Calmels <jcalmels@nvidia.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NVIDIA/sybil"
description = "Tools for Kerberos protocol transition and ticket impersonation"
keywords = ["kerberos", "impersonation", "s4u", "slurm"]
categories = ["authentication"]
exclude = [".*", "deny.toml", "rustfmt.toml", "Makefile"]

[profile.release]
lto = true
panic = "abort"
strip = true

[profile.dev]
opt-level = 3

[features]
default = []
slurm = []

[dependencies]
argh = "0.1.13"
chrono = { version = "0.4.39", features = ["clock"], default-features = false }
bitflags = "2.8.0"
close_fds = "0.3.2"
config = { version = "0.15.6", features = ["toml"], default-features = false }
futures = "0.3.31"
libc = "0.2.169"
libgssapi = { version = "0.8.2", features = ["s4u"] }
netaddr2 = { version = "0.10.0", features = ["serde"] }
nix = { version = "0.29.0", features = ["user", "fs", "process", "signal", "mman"] }
rand = "0.8.5"
regex-lite = "0.1.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
snafu = "0.8.5"
stubborn-io = { version = "0.3.5", features = ["log"] }
syslog-tracing = "0.3.1"
tarpc = { version = "0.35.0", features = ["serde-transport", "serde-transport-bincode", "tcp"] }
tokio = { version = "1.43.0", features = ["sync", "net", "rt-multi-thread", "process", "macros", "signal", "io-std"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
trust-dns-resolver = "0.23.2"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.10"
reqwest = { version = "0.12.12", features = ["rustls-tls", "blocking"], default-features = false}

[package.metadata.deb]
revision = "1"
section = "admin"
priority = "optional"
extended-description = ""
maintainer-scripts = "pkg/deb"
systemd-units = { start = false, enable = false }
depends = [
    "libkrb5-3 (>= 1.19)",
    "libkadm5srv-mit12 (>= 1.19)",
    "libk5crypto3 (>= 1.19)",
    "libkrb5support0 (>= 1.19)",
    "libgssapi-krb5-2 (>= 1.19)",
]
assets = [
  ["target/release/sybil", "usr/sbin/sybil", "755"],
  ["target/release/sybild", "usr/sbin/sybild", "755"],
  ["pkg/sybil.toml", "etc/sybil.toml", "644"],
  ["pkg/sybil.env", "etc/default/sybil", "644"],
]
conf-files = [
    "etc/sybil.toml",
    "etc/default/sybil",
]

[package.metadata.deb.variants.spank]
depends = [ "sybil (>= 2.0)" ]
assets = [
  ["target/release/libsybil.so", "usr/lib/slurm/spank_sybil.so", "644"],
  ["pkg/slurmd.conf", "usr/share/sybil/slurm/slurmd.conf", "644"],
  ["pkg/plugstack.conf", "usr/share/sybil/slurm/plugstack.conf", "644"],
]

[package.metadata.generate-rpm]
release = "1"
requires = { krb5-libs = ">= 1.19", libkadm5 = ">= 1.19" }
assets = [
  {source = "pkg/rpm/sybil.service", dest = "/lib/systemd/system/sybil.service", mode = "644"},
  {source = "target/release/sybil", dest = "/usr/sbin/sybil", mode = "755"},
  {source = "target/release/sybild", dest = "/usr/sbin/sybild", mode = "755"},
  {source = "pkg/sybil.toml", dest = "/etc/sybil.toml", mode = "644", config = true},
  {source = "pkg/sybil.env", dest = "/etc/sysconfig/sybil", mode = "644", config = true},
]

[package.metadata.generate-rpm.variants.spank]
name = "sybil-spank"
requires = { sybil = ">= 2.0" }
assets = [
  {source = "target/release/libsybil.so", dest = "/usr/lib64/slurm/spank_sybil.so", mode = "644"},
  {source = "pkg/slurmd.conf", dest = "/usr/share/sybil/slurm/slurmd.conf", mode = "644"},
  {source = "pkg/plugstack.conf", dest = "/usr/share/sybil/slurm/plugstack.conf", mode = "644"},
]
